# ZephyrSmallDog

./: west.yml
app/: CMakeLists.txt  Kconfig  app_version.h.in
app/src/: main.c
boards/xtensa/nodemcu_esp_32s_kit/: Kconfig.board  Kconfig.defconfig  board.cmake  nodemcu_esp_32s_kit-pinctrl.dtsi  nodemcu_esp_32s_kit.dts  nodemcu_esp_32s_kit.yml  nodemcu_esp_32s_kit_defconfig
